# ripdis

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: README.md  audit-on-push.yml  general.yml  scheduled-audit.yml
ipdisbeacon/: Cargo.toml  README.md
ipdisbeacon/src/: bytes.rs  conf.rs  lib.rs  main.rs  server.rs
ipdisscan/: Cargo.toml  README.md
ipdisscan/src/: beacons.rs  broadcast.rs  conf.rs  lib.rs  listen.rs  main.rs  setup.rs  ui.rs
ipdisserver/: Cargo.toml  README.md
ipdisserver/src/: answers.rs  bytes.rs  conf.rs  exec.rs  hostname.rs  inventory.rs  lib.rs  main.rs  server.rs  setup.rs  signature.rs
