[package]
name = "ipdisbeacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "^0.5.11"
tracing = "^0.1.29"
tracing-subscriber = "^0.2.25"
# bytes = "^1.1.0"

[dev-dependencies]
tracing-test = "^0.1.0"
