[package]
name = "ipdisbeacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
color-eyre = "^0.5.11"
tracing = "^0.1.29"
tracing-subscriber = "^0.2.25"
serde_json = "^1.0"
gethostname = "^0.2"

[dev-dependencies]
tracing-test = "^0.1.0"
