[package]
name = "ipdisscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
color-eyre = "^0.5.11"
tracing = "^0.1.29"
tracing-subscriber = "^0.2.25"
ipdisbeacon = { path = "../ipdisbeacon" }
serde = "^1.0.130"
thiserror = "^1.0.30"
# crossterm = "^0.22.1"
# tui = { version = "^0.16", default-features = false, features = ['crossterm'] }
# tui-logger = "^0.6.4"

[dev-dependencies]
# rand = "0.8"
# argh = "0.1"
tracing-test = "^0.1.0"
