[package]
name = "ipdisscan"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Scan for ipdisserver instances in the network."
license = "MPL-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
color-eyre = "0.5.11"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
ipdisserver = { path = "../ipdisserver" }
serde_json = "1.0"
thiserror = "1.0.30"
crossterm = "0.22.1"
terminal-spinners = "0.3"
crossbeam = "0.8"

[dev-dependencies]
tracing-test = "0.1.0"
